discussion/kv_engine/126160/126160_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add support for magma GetDocs API

Change-Id: Iff70f5b8a40f00b2cf824152d0216207e2ed7ca0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-20 06:22:03.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-20 06:42:02.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27603/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(864): error C2039: "Operations": is not a member of "magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27603/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1777/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:864:37: error: expected class name [clang-diagnostic-error]
class GetOperations : public magma::Operations {
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:865:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    GetOperations(vb_bgfetch_queue_t& itms) : itms(itms) {
    ^
    explicit 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:867:25: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
    size_t Size() const override {
                        ^~~~~~~~~
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:871:44: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
    const Magma::GetOperation At(size_t i) override {
                                           ^~~~~~~~~
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:872:24: error: no member named "At" in "std::unordered_map<DiskDocKey, vb_bgfetch_item_ctx_t, std::hash<DiskDocKey>, std::equal_to<DiskDocKey>, std::allocator<std::pair<const DiskDocKey, vb_bgfetch_item_ctx_t> > >" [clang-diagnostic-error]
        auto op = itms.At(i);
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:873:29: error: no matching constructor for initialization of "Magma::GetOperation" [clang-diagnostic-error]
        Magma::GetOperation getOp;
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/magma.h:692:12: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
    struct GetOperation {
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/magma.h:692:12: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/magma.h:694:9: note: candidate constructor not viable: requires at least argument "key", but no arguments were provided
        GetOperation(const Slice& key, void* context = nullptr)
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:880:5: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
    Add(const Magma::GetOperation op) override {
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1777/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:864:37:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1777/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23604/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:864:37:
error: expected class name
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23604/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3207/ : FAILURE

Compile error at [2020-04-20T06:34:30.733Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:864:48:
error: expected class-name before ?{? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3207/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2252/ : FAILURE

Compile error at [2020-04-20T06:23:48.421Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:864:37:
error: expected class name
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2252/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3269/ : FAILURE

Compile error at [2020-04-20T06:37:47.151Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:864:48:
error: expected class-name before ?{? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3269/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11059/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/296/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3191/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
